# tavily-web-eval-generator

./: .gitignore  README.md  env.example  langgraph.json  main.py  pyproject.toml  requirements.txt
src/web_eval_generator/: __init__.py  config.py  graph.py  main.py  prompts.py  router.py  state.py
src/web_eval_generator/nodes/: __init__.py  curate.py  generate_qa.py  generate_qa_search_queries.py  langsmith_save.py  local_save.py  search.py
src/web_eval_generator/utils/: all.py  search_provider_template.py  tavily_utils.py
